[gd_scene load_steps=4 format=3 uid="uid://vl7iq663bm5s"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_sly1o"]
[ext_resource type="Theme" uid="uid://cl8j1lod7ob4" path="res://themes/game_theme.tres" id="2_rnp50"]
[ext_resource type="Texture2D" uid="uid://bfg5klmbsen6k" path="res://assets/startscreen_wide.png" id="2_tbyk4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sly1o")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tbyk4")
offset = Vector2(960, 540)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.234
anchor_top = 0.649
anchor_right = 0.272
anchor_bottom = 0.649
offset_left = -238.08
offset_top = 37.4
offset_right = -88.08
offset_bottom = 194.4
grow_vertical = 0
theme = ExtResource("2_rnp50")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Start"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
